tests/semantic/case_err5.expected

Semantic Error [line 9]: value: "test"
	Duplicate case detected. All cases must be unique.
