tests/semantic/case_err5.mtp
(*Try duplicate case values in the same case*)
const test := 1;
var a, b : integer;


begin

	case a + b of
	1, test:
		a := b

	end


end.